# openalex-python

./: .codecov.yml  .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  manifest.scm  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-dev.sh  setup.py  test-requirements.txt
.github/workflows/: check-version.yml  python.yml  tests.yml
benchmarks/: test_benchmarks.py  test_performance.py
docs/: api-reference.md  filter-authors.md  filter-concepts.md  filter-funders.md  filter-institutions.md  filter-publishers.md  filter-sources.md  filter-topics.md  filter-works.md  get-a-single-author.md  get-a-single-concept.md  get-a-single-funder.md  get-a-single-institution.md  get-a-single-publisher.md  get-a-single-source.md  get-a-single-topic.md  get-a-single-work.md  get-lists-of-authors.md  get-lists-of-concepts.md  get-lists-of-funders.md  get-lists-of-institutions.md  get-lists-of-publishers.md  get-lists-of-sources.md  get-lists-of-topics.md  get-lists-of-works.md  getting-started.md  group-authors.md  group-concepts.md  group-funders.md  group-institutions.md  group-publishers.md  group-sources.md  group-topics.md  group-works.md  index.md  performance-guide.md  search-authors.md  search-concepts.md  search-funders.md  search-institutions.md  (+6 more)
docs/authors/: README.md  author-disambiguation.md  author-object.md  filter-authors.md  get-a-single-author.md  get-lists-of-authors.md  group-authors.md  limitations.md  search-authors.md
docs/concepts/: README.md  concept-object.md  filter-concepts.md  get-a-single-concept.md  get-lists-of-concepts.md  group-concepts.md  search-concepts.md
docs/funders/: README.md  filter-funders.md  funder-object.md  get-a-single-funder.md  get-lists-of-funders.md  group-funders.md  search-funders.md
docs/institutions/: README.md  filter-institutions.md  get-a-single-institution.md  get-lists-of-institutions.md  group-institutions.md  institution-object.md  search-institutions.md
docs/publishers/: README.md  filter-publishers.md  get-a-single-publisher.md  get-lists-of-publishers.md  group-publishers.md  publisher-object.md  search-publishers.md
docs/sources/: README.md  filter-sources.md  get-a-single-source.md  get-lists-of-sources.md  group-sources.md  search-sources.md  source-object.md
docs/topics/: README.md  filter-topics.md  get-a-single-topic.md  get-lists-of-topics.md  group-topics.md  search-topics.md  topic-object.md
docs/works/: README.md  filter-works.md  get-a-single-work.md  get-lists-of-works.md  group-works.md  search-works.md  work-object.md
examples/: advanced.py  async.py  async_example.py  basic.py  performance_monitoring.py  pyalex_style.py
openalex/: __init__.py  api.py  async_entities.py  client.py  config.py  connection.py  constants.py  entities.py  exceptions.py  logging.py  query.py  templates.py
openalex/cache/: __init__.py  base.py  manager.py  memory.py
openalex/metrics/: __init__.py  collector.py  performance.py  utils.py
openalex/middleware/: __init__.py  base.py
openalex/models/: __init__.py  author.py  base.py  concept.py  filters.py  funder.py  institution.py  keyword.py  publisher.py  source.py  topic.py  work.py
openalex/resilience/: __init__.py  async_circuit_breaker.py  async_queue.py  circuit_breaker.py  request_queue.py
openalex/resources/: __init__.py  authors.py  base.py  concepts.py  funders.py  institutions.py  keywords.py  publishers.py  sources.py  topics.py  works.py
openalex/streaming/: __init__.py  stream.py
openalex/utils/: __init__.py  batch.py  common.py  pagination.py  params.py  rate_limit.py  retry.py  text.py  validation.py
openalex_python/: __init__.py  api_client.py  configuration.py  rest.py
openalex_python/api/: __init__.py  authors_api.py  autocomplete_api.py  base.py  concepts_api.py  funders_api.py  general_api.py  institutions_api.py  keywords_api.py  publishers_api.py  sources_api.py  text_api.py  topics_api.py  works_api.py
openalex_python/models/: __init__.py  all_of_text_concepts_results_concepts_items.py  all_of_text_results_concepts_items.py  all_of_text_results_topics_items.py  all_of_text_topics_results_topics_items.py  apc.py  associated_institution.py  author.py  author_affiliations.py  author_ids.py  authors_list.py  authorship.py  authorship_affiliations.py  autocomplete.py  autocomplete_result.py  autocomplete_results.py  biblio.py  common.py  concept.py  concept_ids.py  concepts_list.py  counts_by_year.py  counts_by_year_inner.py  dehydrated_author.py  dehydrated_concept.py  dehydrated_funder.py  dehydrated_institution.py  dehydrated_publisher.py  dehydrated_source.py  dehydrated_topic.py  error_response.py  funder.py  funder_ids.py  funders_list.py  general.py  geo.py  grant.py  group_by_result.py  group_by_result_inner.py  institution.py  (+42 more)
tests/: README.md  __init__.py  base.py  conftest.py  test_additional_models.py  test_all_of_text_concepts_results_concepts_items.py  test_all_of_text_results_concepts_items.py  test_all_of_text_results_topics_items.py  test_all_of_text_topics_results_topics_items.py  test_apc.py  test_associated_institution.py  test_async.py  test_async_entities.py  test_author.py  test_author_affiliations.py  test_author_ids.py  test_authors_api.py  test_authors_list.py  test_authorship.py  test_authorship_affiliations.py  test_autocomplete_api.py  test_autocomplete_result.py  test_autocomplete_results.py  test_batch_operations.py  test_biblio.py  test_cache.py  test_cache_warming.py  test_client.py  test_client_extra.py  test_concept.py  test_concept_ids.py  test_concepts_api.py  test_concepts_list.py  test_config.py  test_counts_by_year.py  test_counts_by_year_inner.py  test_dehydrated_author.py  test_dehydrated_concept.py  test_dehydrated_funder.py  test_dehydrated_institution.py  (+84 more)
tests/behavior/: test_async.py  test_cache.py  test_cache_warming.py  test_client.py  test_config.py  test_entities.py  test_exceptions.py  test_filters.py  test_isolation_verification.py  test_network_block.py  test_operation_timeouts.py  test_pagination.py  test_query.py  (+1 more)
(+96 files in other folders)
